--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1"
   },
   "devDependencies": {
